--- a/assets/package.json
+++ b/assets/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "esbuild": "^0.23.0",
     "esbuild-sass-plugin": "^3.3.1",
+    "postcss-modules": "^6.0.0",
     "sass": "^1.77.8"
   },
   "dependencies": {
